--- a/public/css/style.css
+++ b/public/css/style.css
@@ -604,6 +604,32 @@ header .CloudD{
     width: 200px;
 }
 
+
+
+.startbox{
+    position: relative;
+    width: 125px;
+    height: 100px;
+    left: 111%;
+    top: 237px;
+    text-align: center;
+}
+.startbox i{
+    display: block;
+    color: #fff;
+}
+.startbox button{
+    border: 0;
+    background: #fcdd39;
+    width: 100%;
+    height: 50px;
+    border-radius: 10px;
+    border-left: 4px solid #fff;
+    font-size: 20px;
+    border-bottom: 6px solid #fff;
+}
+
+
 .part4{
     width: 100%;
     height: auto;
@@ -689,16 +715,26 @@ header .CloudD{
     margin-top: -5%;
 }
 
-.part6{
+/* .part6{
     width: 100%;
     height: 100%;
     background: #fcdd39;
-}
+} */
 
-.part6{
+.part7{
+    text-align: center;
     width: 100%;
     height: 50px;
     background: #000000;
+    color: #fff;
+    padding-top: 10px;
+}
+
+.part8{
+    width: 100%;
+    height: 20px;
+    background: #fcdd39;
+    color: #0008ff;
 }
 
 
@@ -745,6 +781,7 @@ header .CloudD{
     .part2 .text2 b{
         font-size: 7px  ;
     }
+
     .part2 .text3{
         font-size: 8px;
         line-height: 15px;
@@ -1039,6 +1076,18 @@ header .CloudD{
         top: 94px;
         height: 600px;
     }
+
+
+    .startbox{
+        position: relative;
+        width: 125px;
+        height: 100px;
+        top: -80px;
+        text-align: center;
+        left: -16%;
+    }
+
+
     .part3 .Triangle{
         left: -42%;
     }
@@ -1123,8 +1172,21 @@ header .CloudD{
         font-weight: bolder;
     font-size: 11px;
     }
+
+
+
+    .startbox{
+        position: relative;
+        width: 125px;
+        height: 100px;
+        top: 0px;
+        text-align: center;
+        left: -19%;
+    }
+
+
     .part3{
-        height: 500px;
+        height: 550px;
     }
     .part3 .text{
         font-size: 17px;
@@ -1137,7 +1199,7 @@ header .CloudD{
     .part3 .spin-loc {
         position: relative;
         width: 200px;
-        top: 209px;
+        top: 259px;
         right: calc(50% - 100px);
     }
 
