--- a/public/css/style.css
+++ b/public/css/style.css
@@ -413,6 +413,10 @@ body{
     font-size: 20px;
 }
 
+.navbar-collapse{
+    margin-right: 15%;
+}
+
 
 header{
     position: relative;
@@ -429,7 +433,7 @@ header .startbox{
     display: block;
     width: 100%;
     left: 0;
-    top: 0%;
+    top: -20%;
 }
 header .star{
     width: 20px;
@@ -451,7 +455,7 @@ header .text{
     text-align: center;
     color: #fff;
     font-weight: bolder;
-    margin-top: -44%;
+    margin-top: -54%;
     font-size: 120%;
 }
 header .text img{
@@ -485,15 +489,21 @@ font-size: 20px;
 } */
 
 header .Caracter{
-    margin-top: -23%;
+    margin-top: -10%;
     margin-left: -43%;
     width: 13%;
 }
 
 header .CloudD{
-    margin-top: -12%;
+    margin-top: -50%;
     width: 26%;
     margin-left: 35%;
+}
+
+.CloudDa{
+    width: 10%;
+    margin-left: 92%;
+    position: absolute;
 }
 
 .part2 {
@@ -894,7 +904,7 @@ header .CloudD{
 @media screen and (min-width: 700px) {
 
     header .Caracter{
-        width: 12%;
+        width: 14%;
     }
 
     .part2 {
@@ -962,6 +972,9 @@ header .CloudD{
 }
 
 @media screen and (min-width: 1000px) {
+header{
+    top: -50px;
+}
     .part3{
         height: 450px;
     }
