--- a/public/css/style.css
+++ b/public/css/style.css
@@ -502,14 +502,14 @@ header .CloudD{
 
 .CloudDa{
     width: 10%;
-    margin-left: 92%;
+    left:78%;
     position: absolute;
 }
 
 .part2 {
     position: relative;
     width: 100%;
-    margin-top: 20px;
+    margin-top: -50px;
     height: 168px;
     margin-bottom: 27%;
 }
@@ -1051,6 +1051,41 @@ header{
     }
 }
 
+@media screen and (min-width: 1500px) {
+    .part3 .spin {
+        width: 600px;
+        height: 600px;
+        margin-top: -144%;
+    }
+
+    .part3 .spin-loc {
+        right: calc(100% - 617px);
+    }
+    .part3 .spinImg {
+        width: 600px;
+    }
+
+    .startbox button {
+        border: 0;
+        background: #fcdd39;
+        position: relative;
+        width: 160%;
+        left: 100px;
+        height: 78px;
+        border-radius: 10px;
+        border-left: 4px solid #fff;
+        font-size: 20px;
+        border-bottom: 6px solid #fff;
+    }
+
+    .startbox i {
+        display: block;
+        color: #fff;
+        margin-left: 100%;
+    }
+
+}
+
 @media screen and (min-width: 1250px) {
     .part2 {
         height: 550px;
@@ -1084,6 +1119,47 @@ header{
         font-size: 27px;
         line-height: 30px;
     }
+
+}
+
+@media screen and (max-width: 1500px)
+{
+    .part2 {
+        margin-top: -100px;
+    }
+
+}
+
+@media screen and (max-width: 1400px)
+{
+    .part2 {
+        margin-top: -200px;
+    }
+
+}
+
+@media screen and (max-width: 1300px)
+{
+    .part2 {
+        margin-top: -250px;
+    }
+
+}
+
+@media screen and (max-width: 1250px)
+{
+    .part2 {
+        margin-top: -28px;
+    }
+
+}
+
+@media screen and (max-width: 700px)
+{
+    .part2 {
+        margin-top: -130px;
+    }
+
 }
 
 @media screen and (max-width: 1250px) {
@@ -1108,6 +1184,10 @@ header{
     header .text h3{
         font-weight: bolder;
     font-size: 16px;
+    }
+    header .startbox {
+        left: 0;
+        top: -30%;
     }
 }
 
@@ -1143,6 +1223,10 @@ header{
     .part5 .logo{
         width: 70%;
         right: 20%;
+    }
+
+    header .startbox {
+        top: -38%;
     }
 
 }
@@ -1184,11 +1268,27 @@ header{
         right: 20%;
     }
 
+
+    header .startbox {
+        top: -48%;
+    }
+    header .star1{
+        top: 100%;
+    }
+
 }
 
 @media screen and (max-width: 700px) {
     header {
         height: 500px;
+    }
+
+    header .startbox {
+        top: -55%;
+        left: -2%;
+    }
+    header .star1{
+        top: 100%;
     }
 }
 
@@ -1213,22 +1313,6 @@ header{
         font-weight: bolder;
     font-size: 11px;
     }
-
-    header .startbox{
-        top: -30%;
-    }
-
-
-    .startbox{
-        position: relative;
-        width: 125px;
-        height: 100px;
-        top: 0px;
-        text-align: center;
-        left: -19%;
-    }
-
-
     .part3{
         height: 550px;
     }
@@ -1249,6 +1333,23 @@ header{
 
     .part5 .text{
         top: 150px;
+    }
+
+    header .startbox{
+        top: -69%;
+    }
+    header .star1 {
+        top: 142%;
+    }
+
+
+    .startbox{
+        position: relative;
+        width: 125px;
+        height: 100px;
+        top: 0px;
+        text-align: center;
+        left: -19%;
     }
 
 }
@@ -1283,6 +1384,10 @@ header{
 
     .part5 .text{
         top: 100px;
+    }
+
+    header .startbox{
+        top: -80%;
     }
 }
 /* @media screen and (max-width: 950px) {
