--- a/public/css/style.css
+++ b/public/css/style.css
@@ -387,17 +387,22 @@ textarea {
     src: url( '../fonts/Lalezar-Regular.ttf' ) format( 'truetype');
  }
 
+ @font-face{
+    font-family: "Yekan";
+    src: url( '../fonts/Yekan.ttf' ) format( 'truetype');
+ }
 
 body{
     direction: rtl;
     background: #071642;
-    font-family: 'Myriad';
+    font-family: 'Yekan';
     max-width: 1700px;
     margin: 0 auto;
 }
 
 .navbar{
     background: #182050;
+    font-family: Myriad;
 }
 .navbar a{
     color: #fff;
@@ -410,11 +415,13 @@ body{
 }
 .navbar .navbar-toggler span{
     color: #fff;
-    font-size: 20px;
+    font-size: 23px;
 }
+
 
 .navbar-collapse{
     margin-right: 15%;
+    font-size: 35px;
 }
 
 
@@ -433,15 +440,15 @@ header .startbox{
     display: block;
     width: 100%;
     left: 0;
-    top: -20%;
+    top: -9%;
 }
 header .star{
     width: 20px;
 }
 header .star1{
     position: absolute;
-    left: 67%;
-    top: 40%;
+    left: 61%;
+    top: 114%;
 }
 header .star2{
     position: absolute;
@@ -449,6 +456,7 @@ header .star2{
     top: 200px;
 }
 header .text{
+    font-family: 'Yekan';
     line-height: 259%;
     width: 40%;
     margin-right: -1%;
@@ -512,6 +520,7 @@ header .CloudD{
     margin-top: -50px;
     height: 168px;
     margin-bottom: 27%;
+    font-family: Myriad;
 }
 .part2 .backgruond{
     position: relative;
@@ -650,11 +659,13 @@ header .CloudD{
     color: #fff;
 }
 .startbox button{
+    font-family: Sans;
     border: 0;
     background: #fcdd39;
     width: 100%;
     height: 50px;
     border-radius: 10px;
+    color: #071642;
     border-left: 4px solid #fff;
     font-size: 20px;
     border-bottom: 6px solid #fff;
@@ -974,7 +985,7 @@ header .CloudD{
 
 @media screen and (min-width: 1000px) {
 header{
-    top: -50px;
+    top: -68px;
 }
     .part3{
         height: 450px;
@@ -1094,7 +1105,7 @@ header{
     }
 
     .part2 .caracter {
-        margin-top: -229px;
+        margin-top: -320px;
         margin-left: 71%;
         width: 14%;
     }
@@ -1102,7 +1113,7 @@ header{
     .part2 .text1{
         font-size: 35px;
         top: 119px;
-        line-height: 10px;
+        line-height: 38px;
     }
 
     .part2 .text2{
@@ -1127,6 +1138,10 @@ header{
 {
     .part2 {
         margin-top: -100px;
+    }
+
+    header .startbox {
+        top: -20%;
     }
 
 }
@@ -1184,7 +1199,7 @@ header{
     }
     header .text h3{
         font-weight: bolder;
-    font-size: 16px;
+    font-size: 14px;
     }
     header .startbox {
         left: 0;
@@ -1239,22 +1254,25 @@ header{
     }
 
     header .text{
-        line-height: 29px;
+        line-height: 30px;
         width: 40%;
         font-size: 12px;
     }
 
     header .text h2{
         font-weight: bolder;
-        font-size: 30px;
+        font-size: 42px;
     }
     header .text h3{
         font-weight: bolder;
-    font-size: 14px;
+        font-size: 12px;
     }
 
     header .text button {
+        position: relative;
         width: 47%;
+        top: 28px;
+        height: 20px;
     }
 
     .part5{
@@ -1271,10 +1289,14 @@ header{
 
 
     header .startbox {
-        top: -48%;
+        top: -31%;
     }
     header .star1{
         top: 100%;
+    }
+
+    header .star2 {
+        top: 165px;
     }
 
 }
@@ -1285,11 +1307,25 @@ header{
     }
 
     header .startbox {
-        top: -55%;
+        top: -44%;
         left: -2%;
     }
     header .star1{
-        top: 100%;
+        top: 166%;
+        left: 62%;
+    }
+    header .star2{
+        left: 61%;
+        top: 221%;
+    }
+
+    header .text h2{
+        font-weight: bolder;
+        font-size: 35px;
+    }
+    header .text h3{
+        font-weight: bolder;
+        font-size: 10px;
     }
 }
 
@@ -1308,7 +1344,7 @@ header{
     }
     header .text h2{
         font-weight: bolder;
-        font-size: 30px;
+        font-size: 25px;
     }
     header .text h3{
         font-weight: bolder;
@@ -1340,7 +1376,8 @@ header{
         top: -69%;
     }
     header .star1 {
-        top: 142%;
+        top: 100%;
+        left: 67%;
     }
 
 
@@ -1359,25 +1396,25 @@ header{
         height: 345px;
     }
     header .text{
-        line-height: 250%;
+        line-height: 301%;
         width: 40%;
-        font-size: 7px;
+        font-size: 5px;
         margin-top: -51%;
     }
     header .text h2{
         font-weight: bolder;
-        font-size: 20px;
+        font-size: 18px;
     }
     header .text h3{
         font-weight: bolder;
-    font-size: 9px;
+    font-size: 5px;
     }
 
     header .text button {
         border: 0;
         font-family: Lalezar;
         width: 50%;
-        height: 36px;
+        height: 13px;
         border-radius: 25px;
         color: #091744;
         font-weight: bolder;
