--- a/public/css/style.css
+++ b/public/css/style.css
@@ -435,6 +435,7 @@ header .background{
     width: 100%;
     height: auto;
     z-index: 1;
+    display: none;
 }
 header .startbox{
     position: relative;
