--- a/public/css/style.css
+++ b/public/css/style.css
@@ -773,7 +773,7 @@ header .CloudD{
 .part7{
     text-align: center;
     width: 100%;
-    height: 50px;
+    height: auto;
     background: #000000;
     color: #fff;
     padding-top: 10px;
