--- a/public/css/style.css
+++ b/public/css/style.css
@@ -402,7 +402,7 @@ body{
 
 .navbar{
     background: #182050;
-    font-family: Myriad;
+    font-family: 'Yekan';
 }
 .navbar a{
     color: #fff;
@@ -422,7 +422,7 @@ body{
 
 .navbar-collapse{
     margin-right: 15%;
-    font-size: 35px;
+    font-size: 20px;
 }
 
 
@@ -595,6 +595,13 @@ header .CloudD{
     text-align: right;
 }
 
+.copy{
+    display: block;
+    width: 100px;
+    height: 34px;
+    border: 0;
+    margin: 0 auto;
+}
 .part3{
     position: relative;
     width: 100%;
