--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1464,6 +1464,7 @@ header{
 @media screen and (max-width: 310px) {
     .part5 .text{
         line-height: 30px;
+        font-size: 15px;
     }
 
 }
